fix bug where linebreaks in thread texts weren't respected by HTML.

--- a/BookClubFE/src/index.css
+++ b/BookClubFE/src/index.css
@@ -892,5 +892,5 @@ body {
 
 .threadText {
   word-break: break-word;
-  white-space: normal;
+  white-space: pre-wrap;
 }
